Create methods with POST error

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 
-<h1>OVERSKIRFT</h1>
+<h1>OVERSKRIFT</h1>
 <div>
+    <a href = "/create">
+        <button class="button"><span>Create new product</span></button>
+    </a>
     <table>
         <thead>
         <tr>
