--- a/src/main/resources/templates/productCreate.html
+++ b/src/main/resources/templates/productCreate.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Create</title>
 </head>
 <body>
-
+<table>
+    <form action="/productCreate" method="post">
+        <tr>
+            <td><label>Enter ID</label></td>
+            <td><input type="text" name="product_id" placeholder="ID"><br></td>
+        </tr>
+        <tr>
+            <td><label>Enter name</label></td>
+            <td><input type="text" name="product_name" placeholder="Name"><br></td>
+        </tr>
+        <tr>
+            <td><label>Enter description</label></td>
+            <td><input type="text" name="product_desc" placeholder="Description"><br></td>
+        </tr>
+        <tr>
+            <td><label>Enter price</label></td>
+            <td><input type="text" name="product_price" placeholder="Price"><br></td>
+        </tr>
+        <tr>
+            <td style="border:none">
+                <input class="button" type="submit" value="Create">
+            </td>
+        </tr>
+    </form>
+</table>
 </body>
 </html>
