--- a/src/main/resources/templates/productCreate.html
+++ b/src/main/resources/templates/productCreate.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Create</title>
 </head>
 <body>
 <table>
     <form action="/productCreate" method="post">
         <tr>
-            <td><label>Enter ID</label></td>
+            <div class="container">
+                <div class row="row">
+                    <div class="col-4">
+                        <button><a href="/">Home</a></button>
+                </div>
+                <div class="row  row-cols-2">
+                    <div class="col">
+                        <input type="text" name="product_id" placeholder="Enter ID">
+                    </div>
+                    <div class="col">
+                        <input type="text" name="product_name" placeholder="Enter Name">
+                    </div>
+                    <div class="col">
+                        <input type="text" name="product_desc" placeholder="Enter Description">
+                    </div>
+                    <div class="col">
+                        <input type="text" name="product_price" placeholder="Enter Price">
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-4">
+                        <input class="button" type="submit" value="Create">
+                    </div>
+
+            </div>
+           <!-- <td><label>Enter ID</label></td>
             <td><input type="text" name="product_id" placeholder="ID"><br></td>
         </tr>
         <tr>
@@ -27,8 +54,12 @@
             <td style="border:none">
                 <input class="button" type="submit" value="Create">
             </td>
-        </tr>
+        </tr>-->
     </form>
 </table>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
