Update fuldført, men ikke booty flot

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,9 @@
                 <a th:href="@{'/delete/'+${item.product_id}}">
                     <button>Delete</button>
                 </a>
+                <a th:href="@{'/productUpdate/'+${item.product_id}}">
+                    <button>Update info</button>
+                </a>
             </td>
         </tr>
         </thead>
