--- a/src/main/resources/templates/productCreate.html
+++ b/src/main/resources/templates/productCreate.html
@@ -52,7 +52,7 @@
         </tr>
         <tr>
             <td style="border:none">
-                <input class="button" type="submit" value="Create">
+                <input type="submit" value="Create">
             </td>
         </tr>-->
     </form>
