--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,8 @@
         </tr>
         </thead>
     </table>
+    <a class="btn btn-primary" href="create">Opret</a>
+    <a class="btn btn-info" href="h2-console">H2-console</a>
 </div>
 
 
