Product create lavet

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,6 @@
 
 <h1 >Vores Webshop <span class="badge badge-secondary">Nyåbnet</span></h1>
 <div>
-    <a href = "/create">
-        <button class="button"><span>Create new product</span></button>
-    </a>
     <table class="table table-striped">
         <thead class="thead-dark">
         <tr>
@@ -36,7 +33,7 @@
         </tr>
         </thead>
     </table>
-    <a class="btn btn-primary" href="create">Opret</a>
+    <a class="btn btn-primary" href="/productCreate">Opret</a>
     <a class="btn btn-info" href="h2-console">H2-console</a>
 </div>
 
