--- a/src/main/resources/templates/productCreate.html
+++ b/src/main/resources/templates/productCreate.html
@@ -7,7 +7,8 @@
     <title>Create</title>
 </head>
 <body>
-<table>
+<table class="table table-striped">
+    <thead class="thead-dark">
     <form action="/productCreate" method="post">
         <tr>
             <div class="container">
@@ -17,7 +18,7 @@
                 </div>
                 <div class="row  row-cols-2">
                     <div class="col">
-                        <input type="text" name="product_id" placeholder="Enter ID">
+                        <input type="text" name="product_id" placeholder="Enter ID" hidden>
                     </div>
                     <div class="col">
                         <input type="text" name="product_name" placeholder="Enter Name">
@@ -56,6 +57,7 @@
             </td>
         </tr>-->
     </form>
+    </thead>
 </table>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
