Product update html and homecontroller set up

--- a/src/main/resources/templates/productUpdate.html
+++ b/src/main/resources/templates/productUpdate.html
@@ -24,6 +24,14 @@
         <td><input type="text" th:field="*{product_price}" th:value="${product_price}"><br></td>
     </tr>
     <tr>
+        <td><label>Category ID</label></td>
+        <td><input type="text" th:field="*{category.id}" th:value="${id}"><br></td>
+    </tr>
+    <tr>
+        <td><label>Company ID</label></td>
+        <td><input type="text" th:field="*{id}" th:value="${id}"><br></td>
+    </tr>
+    <tr>
         <td><input class="button" type="submit" value="Update"></td>
     </tr>
 </form>
